# mooncut

./: .gitattributes  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.es.md  README.ja.md  README.ko.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  moonbot_feishu_guide_capture.json  moonbot_feishu_guide_capture.md  software_track_insights.md
.github/: dependabot.yml  pull_request_template.md
deliverables/: multi-evidence-orchestration.excalidraw
docs/: COMMUNITY_CAPABILITY_MARKET_UPGRADE.md  DEVELOPER_GUIDE.md  ENGINEERING_AUDIT.md  IOS_FEATURE_ANALYSIS.md  REPOSITORY_HYGIENE.md  SECURITY_DEPLOYMENT.md  SPEECH_CLEANUP.md  TALKING_HEAD_VISUAL_TRACKING_SPEC.md
face-tracker/: README.md  pyproject.toml  requirements.txt
face-tracker/face_tracker/: __init__.py  cli.py  config.py  face_tracker.py  reframing.py  solutions.py
face-tracker/face_tracker/weights/: README.md
face-tracker/tests/: test_reframing.py
fifa-highlights-cli/: README.md  package-lock.json  package.json  tsconfig.json
harmony/: DEVICE-TEST.md  PARITY.md  README.md  build-profile.json5  oh-package.json5
hybrid-subtitle-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
hybrid-subtitle-service/src/hybrid_subtitle/: __init__.py  alignment.py  app.py  audio.py  config.py  jobs.py  models.py  processor.py  providers.py  store.py  subtitles.py
hybrid-subtitle-service/tests/: test_alignment.py  test_api.py  test_audio.py  test_config.py  test_subtitles.py
ios/: .gitignore  README.md  (+3 more)
(+2284 files in other folders)
