[project]
name = "hybrid-subtitle-service"
version = "0.1.0"
description = "Hybrid MiMo + Deepgram subtitle alignment API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jieba>=0.42.1,<1",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "pytest-asyncio>=0.23,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hybrid_subtitle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

